common-applications/test-environment/playground-backend-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-manager
  namespace: playground-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground-manager
  template:
    metadata:
      labels:
        app: playground-manager
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: playground-manager
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/playground/playground-manager:1b69af050ea274866238e76f60ce5ca8519b942a
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 3000Mi
          requests:
            cpu: 1000m
            memory: 2000Mi
