common-applications/test-environment/playground-backend-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playground-manager-service
  namespace: playground-manager
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: playground-manager
  type: ClusterIP
